# travel_agent

./: .gitignore  pyproject.toml
ingestion_output/: chunks.jsonl
scripts/: run_ingestion.py  validate_ingestion.py
src/travel_assistant.egg-info/: SOURCES.txt  requires.txt
src/travel_assistant/core/: config.py
src/travel_assistant/models/: schemas.py
src/travel_assistant/services/: embedding_service.py  ingestion_service.py  llm_service.py  vector_store.py
tests/: test_config.py  test_embedding_service.py  test_llm_service.py  test_schemas.py
